<resources>
    <string name="app_name">Agenda_DMOS5</string>

    <string name="texto_nome">Nome: </string>
    <string name="texto_telelefone_fixo">Telefone Fixo: </string>
    <string name="texto_telefon_contato">Telefone Contato: </string>
    <string name="hint_input_nome_completo">Digite o seu nome completo</string>
    <string name="hint_input_telefone_fixo">Digite um telefone fixo</string>
    <string name="hint_input_telefone_contato">Digite um telefone de contato</string>
    <string name="hint_input_email">Digite o seu email</string>
    <string name="hint_input_senha">Digite a sua senha</string>
    <string name="button_save">Salvar</string>
    <string name="erro_empty_fields">É necessário informar todos os campos!</string>
    <string name="erro_null_contato">Contato inválido</string>
    <string name="unexpected_error">Ocorreu um erro inesperado</string>
    <string name="success_message">Contato adicionado com sucesso!</string>
    <string name="success_message_usuario">Usuário adicionado com sucesso!</string>
    <string name="lembrar_login">Lembrar último login</string>
    <string name="texto_entrar">Entrar</string>
    <string name="texto_cadastrar">Cadastrar novo usuário</string>
    <string name="file_preferences">loginlocal.preferencias</string>
    <string name="key_email">EMAIL</string>
    <string name="key_senha">SENHA</string>
    <string name="key_usuario_logado">USUARIO_LOGADO</string>
    <string name="key_lembrar">LEMBRAR</string>
    <string name="key_primeiro_usuario">primeiro_usuario</string>
</resources>