<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_novo_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NovoUsuarioActivity">

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_email"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_senha"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <CheckBox
        android:id="@+id/lembrar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:text="@string/lembrar_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_senha" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/texto_entrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lembrar_login" />

    <Button
        android:id="@+id/btn_novo_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/texto_cadastrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_entrar" />

</androidx.constraintlayout.widget.ConstraintLayout>