<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_novo_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NovoContatoActivity">

    <EditText
        android:id="@+id/edittext_nome_completo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_nome_completo"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_telefone_fixo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_telefone_fixo"
        android:inputType="text"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/edittext_nome_completo" />

    <EditText
        android:id="@+id/edittext_telefone_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_input_telefone_contato"
        android:inputType="textPhonetic"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/edittext_telefone_fixo" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_telefone_contato" />

</androidx.constraintlayout.widget.ConstraintLayout>